# devops

./: .dvcignore  .env.example  .gitignore  .gitlab-ci.yml  README.md  app.html  clean_reset_all.sh  default.conf  docker-compose.yml  dockerfile  dotenv_example  dvc.yaml  environments  environments_dotenv  install.sh  jenkinsfile  mlops.sh  nginx.conf  params.yaml  reset.sh  run.sh  script.run.sh  script_run.sh  troubleshoot.sh
.dvc/: config
Infra/: explanation
Kube/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml
Security/: security.sh
app/: .dockerignore  .env.example  Dockerfile  app_documentation.md  build_and_push_image.sh  build_and_push_image_podman.sh  configure_dockerhub_username.sh  docker_documentation.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
app/docker/: build_and_push_image.sh  configure_dockerhub_username.sh  docker-compose.yml  docker_documentation.md
app/k8s/: deploy_kubernetes.sh  documentation.md
app/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  model-pvc.yaml  namespace.yaml
app/k8s/overlays/prod/: kustomization.yaml  pod-disruption-budget.yaml
app/src/: evaluate.py  features.py  index.js  index.ts  main.py  prepare.py  split.py
argocd/: application.yaml  deploy_argocd.sh  self_heal_app.sh
cicd/: Dockerfile  Jenkinsfile  azure-pipelines.yml  docker-compose.yml  sonar-project.properties
configs/: dataset.yaml  deployment.yaml  training.yaml
devops-webapp/: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  alerts.yml  app.js  app.test.js  configmap.yaml  docker-compose.yml  main.tf  outputs.tf  package-lock.json  package.json  rollback.sh  script.run.sh  service.yaml  troubleshoot.sh  variables.tf
infra/: deploy_infra.sh  deploy_opentofu.sh
kubernetes/: configmap.yaml  deploy_kubernetes.sh  deployment.yaml  documentation.md  hpa.yaml  ingress.yaml  k_troubleshoot.sh  secrets.yaml  service.yaml
lakefs/: setup.sh
lib/: bootstrap.sh  colors.sh  (+3 more)
(+2313 files in other folders)
