[build-system]
requires      = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "devops-aiml-app"
version     = "1.0.0"
description = "AIML service — FastAPI skeleton ready for DVC / LakeFS / Neptune"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "pydantic==2.*",
    "httpx==0.28.*",
    "python-dotenv==1.*",
]

[project.optional-dependencies]
ml = [
    # Uncomment in Phase 2
    # "dvc==3.*",
    # "neptune==1.*",
    # "lakefs-sdk==1.*",
    # "scikit-learn==1.*",
    # "numpy==1.*",
]
dev = [
    "pytest==8.*",
    "pytest-asyncio==0.25.*",
    "httpx==0.28.*",      # async test client
    "ruff==0.9.*",        # linter + formatter
    "mypy==1.*",
]

[tool.setuptools.packages.find]
where = ["src"]

# Ruff — linter & formatter (replaces flake8 + black + isort)

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# Mypy — static type checking

[tool.mypy]
python_version         = "3.11"
strict                 = false
ignore_missing_imports = true

# Pytest

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]