[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "devops-aiml-app"
version = "0.1.0"
description = "DevOps AI/ML application"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pandas==2.2.2",
    "scikit-learn==1.4.2",
    "numpy==1.26.4",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "evidently==0.4.30",
    "whylogs==1.3.27",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]